# Telegram-Mass-Account-Ai-Messenger

./: .app_state.json  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.encrypted  =1.0.0  ADDITIONAL_OPTIMIZATIONS_SUMMARY.md  ADVANCED_OPTIMIZATIONS.md  API_DOCUMENTATION.md  AUDIT_COMPLETE.txt  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_FINAL_REPORT.md  AUDIT_INDEX.md  AUDIT_ITEMS_RESOLVED.txt  AUDIT_PHASE1_FEATURE_MAP.md  AUDIT_PHASE2_BROWN_LIST.md  AUDIT_PHASE3_TOOLING.md  AUDIT_PHASE4_TEST_EXECUTION.md  AUDIT_PHASE5_IMPLEMENTATION_ROADMAP.md  BUG_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_SESSION_REPORT.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_SUMMARY.txt  CONNECTION_POOL_INTEGRATION_PROGRESS.md  CONTINUED_IMPLEMENTATIONS.md  CONTINUED_PROGRESS_REPORT.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEPLOYMENT_GUIDE.md  Dockerfile  END_TO_END_AUDIT_REPORT.md  ENGINEERING_REVIEW_REPORT.md  FAILURE_SCENARIOS_AUDIT.md  FINAL_FIXES_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SESSION_STATUS.md  FIRST_STARTUP_FIXES.md  FIXES_APPLIED.md  (+116 more)
accounts/: __init__.py  account_audit_log.py  account_creation_failsafes.py  account_creator.py  account_manager.py  account_warmup_service.py  ban_detector.py  country_validator.py  geo_awareness.py  phone_blacklist.py  phone_normalizer.py  sms_timeout_handler.py  username_generator.py  username_validator.py  warmup_tracker.py
ai/: __init__.py  competitor_intelligence.py  content_sandbox.py  conversation_analyzer.py  conversation_persistence.py  error_handler.py  gemini_service.py  intelligence_engine.py  media_intelligence.py  network_analytics.py  response_optimizer.py  status_intelligence.py
analytics/: ab_test_calculator.py  chart_renderer.py  export_manager.py  missing_data_handler.py  safe_dashboard.py
anti_detection/: __init__.py  advanced_cloning_system.py  anti_detection_system.py  device_fingerprint_randomizer.py  location_spoofer.py  shadowban_detector.py  timezone_detector.py  timing_optimizer.py  user_agent_rotation.py
api/: response_formatter.py
campaigns/: __init__.py  campaign_tracker.py  delivery_analytics.py  dm_campaign_manager.py  engagement_automation.py  group_join_manager.py  intelligent_scheduler.py  rate_coordinator.py  read_receipt_poller.py  response_tracker.py  template_tester.py  variant_statistics.py
core/: __init__.py  audit_integration.py  authentication.py  config_manager.py  config_security.py  config_validator.py  error_handler.py  graceful_shutdown.py  repositories.py  secrets_manager.py  security_audit.py  service_container.py  services.py  setup_logging.py
cost/: cost_reconciliation.py
database/: __init__.py  backup_encryption.py  backup_manager.py  connection_pool.py  database_pool.py  database_queries.py  db_lock_handler.py  lock_handler.py  migrate_campaign_db.py  migrate_proxy_db.py  migration_system.py  query_cache.py  scalability_manager.py  transaction_manager.py
discord_ai_photo_bot/: .gitignore  .railway-deploy  COMPREHENSIVE_SETUP.md  Dockerfile  EMOJI_OPTIMIZATION_IMPLEMENTATION.md  HOSTING_GUIDE.md  MANUAL_DEPLOYMENT_STEPS.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  TROUBLESHOOTING_GUIDE.md  deploy_to_railway.sh  diagnose_deployment.py  emoji_optimization_implementation.py  env.sample  fly.toml  manage_server.py  nixpacks.toml  professional_setup.py  railway.json  requirements.txt  server_experience_data.json  server_export.json  setup_discord.py  setup_railway.sh  test_connections.py  update_server_commands.py  (+1 more)
(+206 files in other folders)
